--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "aws-sdk": "^2.1384.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
     "jose": "^4.14.4",
@@ -26,6 +27,8 @@
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
+    "sharp": "^0.32.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
