--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
+# When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
+
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL=""
+
+# Admin Auth Mock
+ADMIN_EMAIL=""
+ADMIN_PASSWORD=""
+
+# JWT
+JWT_SECRET_KEY=""
+
+# AWS S3
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_REGION=""
