--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.3",
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.14",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
@@ -20,19 +25,23 @@
     "aws-sdk": "^2.1384.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.12.16",
     "jose": "^4.14.4",
     "nanoid": "^4.0.2",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
+    "stripe": "^12.7.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/cookie": "^0.5.1",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
